--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
                          "foot1 foot2 foot3";
     grid-gap: 20px;
 }
-a{
+a,button{
     text-decoration: none;
     cursor: pointer;
 }
@@ -72,7 +72,10 @@ nav a{
     border: none;
     letter-spacing: 4px;
     font-weight: 600;
+    border-radius: 5px;
+    transition: .3s all;
 }
+
 .box2 button:hover{
     background-color: hsl(5, 85%, 63%);
 }
@@ -94,6 +97,9 @@ nav a{
     font-weight: 700;
     font-size: 1.2rem;
     line-height: 2;
+}
+.side a:hover{
+    color: hsl(5, 85%, 63%);
 }
 
 .first{
@@ -121,6 +127,9 @@ nav a{
     color: hsl(240, 100%, 5%);
     padding: 10px 0px;
     font-weight: 550;
+}
+.sugg a:hover{
+    color: hsl(5, 85%, 63%);
 }
 .sugg h1,p {
     color: hsl(233, 8%, 79%);
